# dynamic_ui

./: .gitignore  README.md  STATUS.md  architecture.md  custom_ui_doc.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  deps.py  main.py  models.py  profiles.py  schemas.py  security.py  seed.py
backend/app/intents/: executor.py  parser.py
backend/app/llm/: __init__.py  adapter.py  client.py  profile.py  registry.py
backend/app/routers/: auth.py  chat.py  gates.py
backend/tests/: conftest.py  probe_llm.py  test_adapter.py  test_executor_llm_flow.py  test_executor_requests.py  test_parser_requests.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: chat.ts  client.ts
frontend/src/blocks/: AccessList.tsx  Alert.tsx  AssistantMessage.tsx  GateCard.tsx  GateGrid.tsx  RequestCard.tsx  RequestForm.tsx  RequestList.tsx  RequestSheet.tsx  Toast.tsx  registry.tsx
frontend/src/components/: ChatInput.tsx  GatePanel.tsx  MessageList.tsx  Portal.tsx  Sidebar.tsx
frontend/src/stores/: authStore.ts  chatStore.ts  gatesStore.ts
frontend/src/views/: Home.tsx  Login.tsx
frontend/verify/: chat-e2e.mjs  gate-gallery.mjs  gates-panel-list.mjs  placeholder-preview.html  probe-request-cmd.mjs  request-sheet-modal.mjs  request-sheet.mjs  sheet-erase-timing.mjs  shot-placeholder.mjs  zh-input.mjs
nginx/: custom-ui.conf
