[project]
name = "custom-ui-backend"
version = "0.1.0"
description = "custom_ui scenario 1 backend — FastAPI + SQLAlchemy async + JWT"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy>=2.0",
  "asyncpg>=0.30",
  "python-jose[cryptography]>=3.3",
  "bcrypt>=4.2",
  "pydantic>=2.9",
  "pydantic-settings>=2.7",
  "email-validator>=2.2",
  "python-dotenv>=1.0",
  "sse-starlette>=2.1",
  "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"
